--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,48 +1,47 @@
-version: "3.8"
+version: '3.8'
+
 services:
   db:
     image: mcr.microsoft.com/mssql/server:2022-latest
     container_name: hospital-db
     environment:
-      SA_PASSWORD: "${SA_PASSWORD}"
-      ACCEPT_EULA: "${ACCEPT_EULA}"
+      - ACCEPT_EULA=Y
+      - MSSQL_SA_PASSWORD=${DB_PASSWORD}
     ports:
-      - "1433:1433"
+      - "${DB_PORT}:1433"
     volumes:
-      - hospitaldata:/var/opt/mssql
+      - sql_data:/var/opt/mssql
     healthcheck:
-      test: ["CMD-SHELL", "exit 0"] 
+      test: [ "CMD-SHELL", "/opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P ${DB_PASSWORD} -Q 'SELECT 1' || exit 1" ]
       interval: 10s
       retries: 10
-      start_period: 20s
-
-       
+      start_period: 10s
+      timeout: 3s
 
   db-init:
     image: mcr.microsoft.com/mssql-tools
-    container_name: hospital-db-init
+    container_name: hospital_db_init
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     volumes:
       - ./init.sql:/init.sql
     command: >
-      /bin/bash -c "sleep 30 && /opt/mssql-tools/bin/sqlcmd -S hospital-db -U sa -P ${SA_PASSWORD} -i /init.sql"
+      /bin/bash -c "sleep 30 && /opt/mssql-tools/bin/sqlcmd -S hospital-db -U sa -P ${DB_PASSWORD} -i /init.sql"
 
-  web:
+  app:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: hospital-web
-    depends_on:
-      - db
+    container_name: hospital_app
     ports:
-      - "5000:8080"
+      - "${APP_PORT}:8080"
     environment:
-      - ConnectionStrings__DefaultConnection=Server=hospital-db;Database=${DB_NAME};User Id=sa;Password=${SA_PASSWORD};Encrypt=False;TrustServerCertificate=True;
-      - ASPNETCORE_ENVIRONMENT=${ASPNETCORE_ENVIRONMENT}
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ConnectionStrings__DefaultConnection=Server=hospital-db;Database=${DB_NAME};User Id=sa;Password=${DB_PASSWORD};Encrypt=False;TrustServerCertificate=True;
+    depends_on:
+      db:
+        condition: service_healthy
 
 volumes:
-  hospitaldata:
-
-
-      
+  sql_data:
