--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,47 +1,45 @@
-version: '3.8'
-
+version: "3.8"
 services:
   db:
     image: mcr.microsoft.com/mssql/server:2022-latest
     container_name: hospital-db
     environment:
-      - ACCEPT_EULA=Y
-      - MSSQL_SA_PASSWORD=${DB_PASSWORD}
+      SA_PASSWORD: "${SA_PASSWORD}"
+      ACCEPT_EULA: "${ACCEPT_EULA}"
     ports:
-      - "${DB_PORT}:1433"
+      - "1433:1433"
     volumes:
-      - sql_data:/var/opt/mssql
+      - hospitaldata:/var/opt/mssql
     healthcheck:
-      test: [ "CMD-SHELL", "/opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P ${DB_PASSWORD} -Q 'SELECT 1' || exit 1" ]
+      test: ["CMD-SHELL", "exit 0"] 
       interval: 10s
       retries: 10
-      start_period: 10s
-      timeout: 3s
+      start_period: 20s
+
+       
 
   db-init:
     image: mcr.microsoft.com/mssql-tools
-    container_name: hospital_db_init
+    container_name: hospital-db-init
     depends_on:
-      db:
-        condition: service_healthy
+      - db
     volumes:
       - ./init.sql:/init.sql
     command: >
-      /bin/bash -c "sleep 45 && /opt/mssql-tools/bin/sqlcmd -S hospital-db -U sa -P ${DB_PASSWORD} -i /init.sql"
+      /bin/bash -c "sleep 60 && /opt/mssql-tools/bin/sqlcmd -S hospital-db -U sa -P ${SA_PASSWORD} -i /init.sql"
 
-  app:
+  web:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: hospital_app
-    ports:
-      - "${APP_PORT}:8080"
-    environment:
-      - ASPNETCORE_ENVIRONMENT=Development
-      - ConnectionStrings__DefaultConnection=Server=hospital-db;Database=${DB_NAME};User Id=sa;Password=${DB_PASSWORD};Encrypt=False;TrustServerCertificate=True;
+    container_name: hospital-web
     depends_on:
-      db:
-        condition: service_healthy
+      - db
+    ports:
+      - "5000:8080"
+    environment:
+      - ConnectionStrings__DefaultConnection=Server=hospital-db;Database=${DB_NAME};User Id=sa;Password=${SA_PASSWORD};Encrypt=False;TrustServerCertificate=True;
+      - ASPNETCORE_ENVIRONMENT=${ASPNETCORE_ENVIRONMENT}
 
 volumes:
-  sql_data:
+  hospitaldata:
