--- a/k8s/01-secret.yaml
+++ b/k8s/01-secret.yaml
@@ -5,4 +5,4 @@ metadata:
 type: Opaque
 stringData:
   SA_PASSWORD: "YourStrong@Passw0rd"
-  CONNECTION_STRING: "Server=hospital-db;Database=HospitalDB;User Id=sa;Password=YourStrong@Passw0rd;Encrypt=False;TrustServerCertificate=True;"
+  CONNECTION_STRING: "Server=hospital-db;Database=HospitalManagementSystem;User Id=sa;Password=YourStrong@Passw0rd;Encrypt=False;TrustServerCertificate=True;"
