--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,5 @@ HospitalManagementSystem.Services/bin/
 HospitalManagementSystem.Core/bin/
 
 k8s/01-secret.yaml
+01-secret.yaml
 k8s/02-configmap.yaml
